add icons of tree

--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -16,7 +16,7 @@
 <style type="text/css">
 
 .butt {
-	background:url(images/Button.png)!important;
+	background:url(images/button.png)!important;
 	background-repeat:no-repeat;
 	border-radius:0;
 	height:16px;
@@ -53,7 +53,7 @@
 }
 
 .lab {
-	background:url(images/Label.png)!important;
+	background:url(images/label.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -67,77 +67,77 @@
 }
 
 .check {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/checkbox.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .txb {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/textbox.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .ptxb {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/passwordtextbox.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .listp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/listpicker.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .img {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/image.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .imgp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/imagepicker.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .can {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/canvas.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .emailp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/emailpicker.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .pnp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/phonenumberpicker.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .conp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/contactpicker.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .vp {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/videoplayer.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -151,21 +151,21 @@
 }
 
 .note {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/notifier.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .tdb {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/tinydb.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .cloc {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/clock.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -186,35 +186,43 @@
 }
 
 .cam {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/camcorder.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
+.camer {
+	background:url(images/camera.png)!important;
+	border-radius:0;
+	height:16px;
+	width:16px;
+}
+
+
 .play {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/player.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .soun {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/sound.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .txt {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/texting.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .twit {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/twitter.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -249,49 +257,49 @@
 }
 
 .bars {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/barcodescanner.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .bluec {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/bluetoothclient.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .blues {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/bluetoothserver.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .speechr {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/speechrecognizer.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .txts {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/texttospeech.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .twdb {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/tinywebdb.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .wb {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/web.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -611,6 +619,10 @@ document.onkeydown = function() {
 				<h:outputText value="#{node1}"/>
 			</p:treeNode>
 			
+			<p:treeNode type="Camera" icon="camer">
+				<h:outputText value="#{node1}"/>
+			</p:treeNode>
+			
 			
 			
 			
@@ -788,6 +800,10 @@ document.onkeydown = function() {
 			</p:treeNode>
 			
 			<p:treeNode type="Voting!!" styleClass="misMatch" icon="vote">
+				<h:outputText value="#{node1}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="Camera!!" styleClass="misMatch" icon="camer">
 				<h:outputText value="#{node1}"/>
 			</p:treeNode>
 			
@@ -981,6 +997,9 @@ document.onkeydown = function() {
 				<h:outputText value="#{node2}"/>
 			</p:treeNode>
 			
+			<p:treeNode type="Camera" icon="camer">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
 			
 			
 			
@@ -1161,6 +1180,10 @@ document.onkeydown = function() {
 			</p:treeNode>
 			
 			<p:treeNode type="Voting!!" styleClass="misMatch" icon="vote">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
+			
+			<p:treeNode type="Camera!!" icon="camer" styleClass="misMatch">
 				<h:outputText value="#{node2}"/>
 			</p:treeNode>
 			
