add new icons and change isEverMatched

--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -144,7 +144,7 @@
 }
 
 .webv {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/webviewer.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
@@ -306,28 +306,28 @@
 }
 
 .ftc {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/fusiontablescontrol.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .gamec {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/gameclient.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .soundr {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/soundrecorder.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
 }
 
 .vote {
-	background:url(images/TableArrangement.png)!important;
+	background:url(images/voting.png)!important;
 	border-radius:0;
 	height:16px;
 	width:16px;
