--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -193,7 +193,7 @@ function zipFileIfEmpty(){
     </p:outputPanel> 
     
     <p:outputPanel layout="block">
-    	#{a.assignmentAuthor}
+    	#{gradestudentBean.selectedAssignment.assignmentAuthor}
     </p:outputPanel>
     
     <p:outputPanel layout="block" style="text-align:left;font-size:14px;word-wrap:break-word; word-break:break-all; position:absolute;top:100px;left:50px; width:230px; height:120px; ">
