Add more tooltips

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -114,7 +114,9 @@ function zipFileIfEmpty(){
 	
 	<p:outputPanel layout="block" styleClass="logout">
 	<h:form> 
-    <h:commandButton onmouseover="this.src ='images/logout_s1.png'" onmouseout="this.src='images/logout_s0.png'" onmousedown="this.src='images/logout_s2.png'" action="#{logout.logout()}" image="images/logout_s0.png" />
+    <h:commandButton id="goback" onmouseover="this.src ='images/logout_s1.png'" onmouseout="this.src='images/logout_s0.png'" onmousedown="this.src='images/logout_s2.png'" action="#{logout.logout()}" image="images/logout_s0.png" />
+     	<p:tooltip for="goback" value="Log Out" showEffect="fade" hideEffect="fade" position="left center"/>
+    
     </h:form>
     </p:outputPanel>
     
