--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -106,7 +106,6 @@ function zipFileIfEmpty(){
 			i=1;
 		}
 	}
-	return false;
 }
 
 
@@ -268,7 +267,7 @@ function zipFileIfEmpty(){
 
 			<p:outputPanel layout="block" style="position:absolute;top:450px;left:55px">
 
-			<h:commandButton type="button" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png" onclick="addnew_page01.hide(); addnew_page02.show();"/>
+			<h:commandButton type="button" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png" onclick="zipFileIfEmpty(); return false;"/>
 
 			</p:outputPanel>
 
