--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -97,14 +97,9 @@ function zipFileIfEmpty(){
 		v1.focus();
 		nameCheck.css('color','red');
 	}else{
-		console.log('triggered');
-		var i=0;
-		if(i==0){
-//			$('[id="formAdd:next"]').trigger('click');
-   	 		addnew_page01.hide();
-			addnew_page02.show();
-			i=1;
-		}
+   	 	addnew_page01.hide();
+		addnew_page02.show();
+		return false;
 	}
 }
 
@@ -267,7 +262,7 @@ function zipFileIfEmpty(){
 
 			<p:outputPanel layout="block" style="position:absolute;top:450px;left:55px">
 
-			<h:commandButton type="button" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png" onclick="zipFileIfEmpty(); return false;"/>
+			<h:commandButton type="button" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png" onclick="zipFileIfEmpty();"/>
 
 			</p:outputPanel>
 
