add the admin help page, and update with admin help page.
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/loginErr1.xhtml
+++ b/DatabaseOperation/web/loginErr1.xhtml
@@ -27,7 +27,7 @@
     
 
 <p:outputPanel layout="block" styleClass="status_bar">
-<h1>Wrong password.</h1>
+<h1>404 not found.</h1>
   </p:outputPanel>	
 		
     	</p:outputPanel>
