--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -157,7 +157,7 @@ function zipFileIfEmpty(){
         </p:column>
         
         <p:column style="text-align: center;" headerText="Current Status">  
-            <h:outputText escape="fasle" value="#{a.assignmentStatus}" />
+            <h:outputText escape="false" value="#{a.assignmentStatus}" />
         </p:column>
       
         <f:facet name="footer">  
