--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -201,7 +201,7 @@ function zipFileIfEmpty(){
     </p:outputPanel>
     
     <p:outputPanel layout="block">
-    	<h:outputText escape="fasle" value="#{assignment.selectedAssignment.pdfDownloadLink}" />
+    	<h:outputText escape="false" value="#{assignment.selectedAssignment.pdfDownloadLink}" />
     </p:outputPanel>
     
     <p:outputPanel layout="block">
