--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -318,7 +318,7 @@ function zipFileIfEmpty(){
 
 			
 			<p:outputPanel layout="block" style="position:absolute;top:450px;left:55px">
-			<h:commandButton type="submit" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'"  image="/images/upload_s0.png"  onclick="addnew_page02.hide();addnew_page03.show();" />
+			<h:commandButton type="submit" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png"  onclick="addnew_page02.hide();addnew_page03.show();" />
 			</p:outputPanel>
 			
 			<p:outputPanel layout="block" style="position:absolute;top:450px;right:59px">
@@ -462,7 +462,7 @@ function zipFileIfEmpty(){
             
 			
 			<p:outputPanel layout="block" style="position:absolute;top:450px;left:55px">
-			<h:commandButton type="submit" onmouseover="this.src ='images/update_s1.png'" onmouseout="this.src='images/update_s0.png'" onmousedown="this.src='images/update_s2.png'"  image="/images/update_s0.png"  onclick="update_page02.hide();update_page03.show();" />
+			<h:commandButton type="submit" onmouseover="this.src ='images/next_s1.png'" onmouseout="this.src='images/next_s0.png'" onmousedown="this.src='images/next_s2.png'"  image="/images/next_s0.png"  onclick="update_page02.hide();update_page03.show();" />
 			</p:outputPanel>
 			
 			<p:outputPanel layout="block" style="position:absolute;top:450px;right:59px">
