1.add the height automatic adjustment to admin view page 2.fix the table column length change problem
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/profileToolBar.xhtml
+++ b/DatabaseOperation/web/profileToolBar.xhtml
@@ -23,7 +23,7 @@
 	<p:spacer width="18" height="10" /> 
     
 
-	<h:commandLink value="News"  style="color:#212121; font-family:Tahoma; font-size:14;text-decoration:none;"/>
+	<h:commandLink action="http://ix.cs.uoregon.edu/~fickas/new_home/" value="News"  style="color:#212121; font-family:Tahoma; font-size:14;text-decoration:none;"/>
 	 </h:form>
 	</div>
 	
