finally fix the problem, it's all your fault! Yang
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -115,6 +115,15 @@ function clearInvalidFileMsg(){
     </h:form>
     </p:outputPanel>
  
+  <p:outputPanel layout="block" styleClass="profiletoolbar">
+
+
+
+<ui:include src="/profileToolBar.xhtml" /> 
+
+ </p:outputPanel>
+ 
+ 
 </p:outputPanel>
  
  
