fix a minor description problem in admin pdf download page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -224,8 +224,8 @@ function zipFileIfEmpty(){
   	 #{assignment.selectedAssignment.description}
     </p:outputPanel>
     
-    <p:outputPanel layout="block" style="position:absolute; width:140px; left: 55px;top:276px">
-    	<h:outputText escape="false" value="#{assignment.selectedAssignment.pdfDownloadLink}" />
+    <p:outputPanel layout="block" style="position:absolute; width:140px; left: 80px;top:276px">
+    	PDF:<h:outputText escape="false" value="#{assignment.selectedAssignment.pdfDownloadLink}" />
     </p:outputPanel>
     
 <!--     <ui:fragment rendered="#{assignment.selectedAssignment.pdfExist}">
