Download Link MisSpelled; Tree Node Display Bugs

--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -224,7 +224,7 @@ function zipFileIfEmpty(){
   	 #{assignment.selectedAssignment.description}
     </p:outputPanel>
     
-    <p:outputPanel layout="block" style="position:absolute; width:140px; left: 80px;top:276px">
+    <p:outputPanel layout="block" style="position:absolute; left: 80px;top:276px">
     	PDF:<h:outputText escape="false" value="#{assignment.selectedAssignment.pdfDownloadLink}" />
     </p:outputPanel>
     
